gitops/components/data-platform/elk/kibana/ui/workload.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-ui
  namespace: data-platform-dev
  annotations: {kubernetes.io/ingress.class: sunmoon}
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: 'Host(`kibana.sunmoonai.com`)'
      services: [{name: kibana, port: https, scheme: https, serversTransport: kibana-internal}]
  tls: {secretName: kibana-ui-tls}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: kibana-ui-access, namespace: data-platform-dev}
spec:
  podSelector: {matchLabels: {app.kubernetes.io/name: kibana}}
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector: {matchLabels: {kubernetes.io/metadata.name: 'ingress-platform-dev'}}
          podSelector: {matchLabels: {app.kubernetes.io/name: traefik}}
        - podSelector: {matchLabels: {app.kubernetes.io/name: kibana-ui-initialize}}
      ports: [{protocol: TCP, port: 5601}]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: kibana-ui-initialize-egress, namespace: data-platform-dev}
spec:
  podSelector: {matchLabels: {app.kubernetes.io/name: kibana-ui-initialize}}
  policyTypes: [Egress]
  egress:
    - to: [{podSelector: {matchLabels: {app.kubernetes.io/name: kibana}}}]
      ports: [{protocol: TCP, port: 5601}]
